euphony-sc-core/src/snapshots/euphony_sc__osc__server__clear_sched_test.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/clearSched",
            args: [],
        },
    ),
)
