euphony-sc-core/src/snapshots/euphony_sc__osc__server__error_test-2.snap
---
source: src/osc.rs
expression: msg
---
Ok(
    Message(
        OscMessage {
            addr: "/error",
            args: [
                Int(
                    1,
                ),
            ],
        },
    ),
)
